--- a/helloWorld.html
+++ b/helloWorld.html
@@ -43,8 +43,22 @@
 			position: static;
 			width: 30%;
 			height: 100%;
-			left : 0;
-			background : blue;
+			background-color : blue;
+			float: left;
+		}
+		
+		header {
+			width: 70%;
+			text-align : center;
+			background-color : green;
+			float: right;
+		}
+		
+		main {
+			width: 70%;
+			text-align : center;
+			background-color : red;
+			float: right;
 		}
 		
 		
@@ -53,57 +67,26 @@
 	</head>
 	<body>
 			
-		
+		<header>
+			<p>Salut je suis la future barre de navigation</p>
+		</header>
 		
 		<aside>
+			<p> salut c'est moi </p>
+			<p> salut c'est moi </p>
+			<p> salut c'est moi </p>
+			<p> salut c'est moi </p>
+			<p> salut c'est moi </p>
+			<p> salut c'est moi </p>
+			<p> salut c'est moi </p>
 			<p> salut c'est moi </p>
 		</aside>
 		
 		<main>
 			<h1>Hello world !</h1>
-		
-			<form action="helloWorld2" methode="POST">
-				<input type="text" name="nom" id="nom">
-				<input type="submit" value="envoyer" name="submit">
-			</from>
-			<button>Click me</button>
+			<p> Salut je suis le main </p>
+			
 		</main>
-		
-		<!--
-		<section>
-			<img src="PourCV.jpg" width="80" height="80">
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-			<p> et si j'ecris ici ca fait quoi ?</p>
-  
-			<article>
-				
-				<p>Ici je veux mettre un menu</p>
-				
-				<h1>London</h1>
-				<p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-				<p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-			</article>
-		</section>
-		-->
 		
 		
 	</body>
