Ajout photo mauvais endroit

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -47,7 +47,7 @@
 			float: left;
 		}
 		
-		header {
+		nav {
 			width: 70%;
 			text-align : center;
 			background-color : green;
@@ -61,15 +61,21 @@
 			float: right;
 		}
 		
+		img {
+			border-radius: 50%;
+			border: 5px solid #aaa;
+		}
+		
 		
 		
 		</style>
 	</head>
+	
 	<body>
 			
-		<header>
+		<nav>
 			<p>Salut je suis la future barre de navigation</p>
-		</header>
+		</nav>
 		
 		<aside>
 			<p> salut c'est moi </p>
@@ -83,6 +89,14 @@
 		</aside>
 		
 		<main>
+			<header>
+			
+			
+			
+			
+			
+				<img src="PourCV.jpg" alt="CV" width="150" height="150">
+			</header>
 			<h1>Hello world !</h1>
 			<p> Salut je suis le main </p>
 			
