--- a/helloWorld.html
+++ b/helloWorld.html
@@ -72,6 +72,21 @@
 			text-align : right;
 		}
 		
+		#nav {
+			padding: 0; margin: 0;
+			text-align: center; /* centrer le texte */
+		}
+		
+		#nav li {
+			display: inline;
+			list-style: none; /* nécessaire pour IE7 */
+		}
+		
+		#nav a {
+			display:inline-block;
+			margin: 0 30px;
+		}
+		
 		</style>
 	</head>
 	
@@ -79,10 +94,10 @@
 			
 		<nav>
 			<p>Salut je suis la future barre de navigation</p>
-			<ul id="barnav">
-				<li id="nav-moi"><a href="#">Moi</a></li>
-				<li id="nav-projet"><a href="#">Mes projets</a></li>
-				<li id="nav-contact"><a href="#">Contact</a></li>
+			<ul id="nav">
+				<li><a href="#">Moi</a></li>
+				<li><a href="#">Mes projets</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		
