--- a/helloWorld.html
+++ b/helloWorld.html
@@ -72,19 +72,25 @@
 			text-align : right;
 		}
 		
-		#nav {
-			padding: 0; margin: 0;
-			text-align: center; /* centrer le texte */
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			width: 200px;
+			background-color: #f1f1f1;
+		}
+
+		li a {
+			display: block;
+			color: #000;
+			padding: 8px 0 8px 16px;
+			text-decoration: none;
 		}
 		
-		#nav li {
-			display: inline;
-			list-style: none; /* nécessaire pour IE7 */
-		}
-		
-		#nav a {
-			display:inline-block;
-			margin: 0 30px;
+		/* Change the link color on hover */
+		li a:hover {
+			background-color: #555;
+			color: white;
 		}
 		
 		</style>
