--- a/helloWorld.html
+++ b/helloWorld.html
@@ -6,43 +6,9 @@
 		<style>
 		
 		
-		/*
-		section {
-			display: -webkit-flex;
-			display: flex;
-		}
-		
-		
-		nav {
-			-webkit-flex: 1;
-			-ms-flex: 1;
-			flex: 1;
-			background: #ccc;
-			padding: 20px;
-		}
-
-		
-		article {
-			-webkit-flex: 3;
-			-ms-flex: 3;
-			flex: 3;
-			background-color: #f1f1f1;
-			padding: 10px;
-		}
-		
-		header {
-			position: absolute;
-			width: 401px;
-			height: 51px;
-			left: 350px;
-			top: 0px;
-		}
-		*/
-		
 		aside {
 			position: static;
 			width: 30%;
-			height: 100%;
 			background-color : blue;
 			float: left;
 		}
@@ -65,6 +31,11 @@
 			border: 5px solid #aaa;
 			float : right;
 			margin-right : 30px;
+		}
+		
+		.imageClassic {
+			margin-left : 100px;
+			margin-top : 50px;
 		}
 		
 		header {
@@ -114,6 +85,8 @@
 		</nav>
 		
 		<aside>
+			<img src="PourCV.jpg" alt="maPhotoClassic" class="imageClassic" width="150" height="150">
+			<br>
 			<p> salut c'est moi </p>
 			<p> salut c'est moi </p>
 			<p> salut c'est moi </p>
@@ -128,7 +101,8 @@
 			<header>
 				<img src="PourCV.jpg" alt="maPhoto" class="image" width="150" height="150">
 				<h1>Bonjour,</h1>
-				<p>Je m'appelle Helene Carlier-Gubler</p>
+				<p>Je m'appelle Helene Carlier-Gubler
+				<br>Je recherche un stage de 4 mois en tant que développeuse !</p>
 			</header>
 			
 			
