aside très moche mais fonctionne

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -71,6 +71,15 @@
 			color: white;
 		}
 		
+		.linkedin {
+			display: block;
+			color: white;
+			text-align: center;
+			text-decoration: none;
+		}
+		
+		
+		
 		</style>
 	</head>
 	
@@ -87,14 +96,19 @@
 		<aside>
 			<img src="PourCV.jpg" alt="maPhotoClassic" class="imageClassic" width="150" height="150">
 			<br>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
-			<p> salut c'est moi </p>
+			<br>
+			<h1>Elève en école d'ingénieur,</h1>
+			<br>
+			<h2>Recherche d'un stage de 4 mois<br> en tant que développeuse</h2>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<a class="linkedin" href="https://www.linkedin.com/in/hélène-carlier-gubler-095965150">Mon LinkedIn !</a>
 		</aside>
 		
 		<main>
