tout est gris !

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -9,7 +9,7 @@
 		aside {
 			position: static;
 			width: 30%;
-			background-color : blue;
+			background-color : rgba(196, 196, 196);
 			float: left;
 		}
 		
@@ -22,7 +22,7 @@
 		main {
 			width: 70%;
 			text-align : center;
-			background-color : red;
+			background-color : rgba(245, 245, 245);
 			float: right;
 		}
 		
@@ -78,6 +78,12 @@
 			text-decoration: none;
 		}
 		
+		article
+		{
+			text-align : left;
+			padding-left : 20px;
+		}
+		
 		
 		
 		</style>
@@ -97,9 +103,9 @@
 			<img src="PourCV.jpg" alt="maPhotoClassic" class="imageClassic" width="150" height="150">
 			<br>
 			<br>
-			<h1>Elève en école d'ingénieur,</h1>
+			<h1>  Elève en école d'ingénieur,</h1>
 			<br>
-			<h2>Recherche d'un stage de 4 mois<br> en tant que développeuse</h2>
+			<h2>  Recherche d'un stage de 4 mois<br>  en tant que développeuse</h2>
 			<br>
 			<br>
 			<br>
@@ -119,10 +125,15 @@
 				<br>Je recherche un stage de 4 mois en tant que développeuse !</p>
 			</header>
 			
+			<article>
+				<h1>A propos de moi !</h1>
+				<p>Je suis actuelement en quatrième année d'école d'ingénieur spécialisée en objets connectés.
+				<br>Passionnée par les IoT et le développement web, je recherche un stage de 4 mois en tant que développeuse.
+				<br>Motivée, curieuse et dynamique, je suis prête à rejoindre vos équipes !</p>
+			</article>
 			
 			
-			<h1>Hello world !</h1>
-			<p> Salut je suis le main </p>
+			
 			
 		</main>
 		
