aug expérience + pas static :angry:

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -5,12 +5,18 @@
 		<title>CV Hélène</title>
 		<style>
 		
+		body,html {
+			height : 100%;
+			width : 100%;
+			margin: 0;
+		}
 		
 		aside {
 			position: static;
 			width: 30%;
 			background-color : rgba(196, 196, 196);
 			float: left;
+			height : 100%
 		}
 		
 		nav {
@@ -107,12 +113,7 @@
 			<br>
 			<h2>  Recherche d'un stage de 4 mois<br>  en tant que développeuse</h2>
 			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
+			
 			<br>
 			<a class="linkedin" href="https://www.linkedin.com/in/hélène-carlier-gubler-095965150">Mon LinkedIn !</a>
 		</aside>
@@ -130,8 +131,27 @@
 				<p>Je suis actuelement en quatrième année d'école d'ingénieur spécialisée en objets connectés.
 				<br>Passionnée par les IoT et le développement web, je recherche un stage de 4 mois en tant que développeuse.
 				<br>Motivée, curieuse et dynamique, je suis prête à rejoindre vos équipes !</p>
+				<br>
+				<br>
 			</article>
 			
+			<article>
+				<h1>Mes expérience !</h1>
+				<h2>Promod – Conseillère de vente </h2>
+				<p>Conseillère de vente à différents Promod en tant qu'intérim 
+				<br><tr>- S'adapter aux différentes équipes, magasins et clientèles 
+				<br><tr>- Conseiller la clientèle 
+				<br><tr>- Participer à la gestion des magasins</p>
+				<br>
+				<h2>Bâtisphère Services –  Stagiaire assistant chef de marché</h2>
+				<p><br>Janvier 2019 – Février 2019
+				<br><tr>- Recherche de l’évolution des prix et de la fiscalité de l’énergie
+				<br><tr>- Observation de l’état de la programmation pluriannuelle de l’énergie en France
+				<br><tr>- Mise à jour des données sur les aides nationales, régionales et locales de la rénovation énergétique</p>
+				<br>
+
+				
+			</article>
 			
 			
 			
