Ca y est c'est fixé ! :+1:

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -12,7 +12,7 @@
 		}
 		
 		aside {
-			position: static;
+			position: fixed;
 			width: 30%;
 			background-color : rgba(196, 196, 196);
 			float: left;
@@ -138,16 +138,17 @@
 			<article>
 				<h1>Mes expérience !</h1>
 				<h2>Promod – Conseillère de vente </h2>
+				<p style="font-style:italic">Janvier 2018 et temps partiel 2018 – 2019</p>
 				<p>Conseillère de vente à différents Promod en tant qu'intérim 
-				<br><tr>- S'adapter aux différentes équipes, magasins et clientèles 
-				<br><tr>- Conseiller la clientèle 
-				<br><tr>- Participer à la gestion des magasins</p>
+				<br>- S'adapter aux différentes équipes, magasins et clientèles 
+				<br>- Conseiller la clientèle 
+				<br>- Participer à la gestion des magasins</p>
 				<br>
 				<h2>Bâtisphère Services –  Stagiaire assistant chef de marché</h2>
-				<p><br>Janvier 2019 – Février 2019
-				<br><tr>- Recherche de l’évolution des prix et de la fiscalité de l’énergie
-				<br><tr>- Observation de l’état de la programmation pluriannuelle de l’énergie en France
-				<br><tr>- Mise à jour des données sur les aides nationales, régionales et locales de la rénovation énergétique</p>
+				<p style="font-style:italic">Janvier 2019 – Février 2019</p>
+				<p><br>- Recherche de l’évolution des prix et de la fiscalité de l’énergie
+				<br>- Observation de l’état de la programmation pluriannuelle de l’énergie en France
+				<br>- Mise à jour des données sur les aides nationales, régionales et locales de la rénovation énergétique</p>
 				<br>
 
 				
