--- a/helloWorld.html
+++ b/helloWorld.html
@@ -136,6 +136,14 @@
 			</article>
 			
 			<article>
+				<h1>Je me présente</h1>
+				<video width="60%" controls>
+					<source src="video.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+			</article>
+			
+			<article>
 				<h1>Mes expérience !</h1>
 				<h2>Promod – Conseillère de vente </h2>
 				<p style="font-style:italic">Janvier 2018 et temps partiel 2018 – 2019</p>
@@ -149,15 +157,8 @@
 				<p><br>- Recherche de l’évolution des prix et de la fiscalité de l’énergie
 				<br>- Observation de l’état de la programmation pluriannuelle de l’énergie en France
 				<br>- Mise à jour des données sur les aides nationales, régionales et locales de la rénovation énergétique</p>
-				<br>
-
-				
-			</article>
-			
-			
-			
-		</main>
-		
-		
+				<br>				
+			</article>			
+		</main>	
 	</body>
 </html>
