--- a/helloWorld.html
+++ b/helloWorld.html
@@ -99,9 +99,9 @@
 			
 		<nav>
 			<ul id="nav">
-				<li><a class="active" href="#">Moi</a></li>
-				<li><a href="#">Mes projets</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a class="active" href="helloWorld.html">Moi</a></li>
+				<li><a href="projet.html">Mes projets</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		
