--- a/helloWorld.html
+++ b/helloWorld.html
@@ -3,96 +3,7 @@
 	<head>
 		<meta charset=utf-8>
 		<title>CV Hélène</title>
-		<style>
-		
-		body,html {
-			height : 100%;
-			width : 100%;
-			margin: 0;
-		}
-		
-		aside {
-			position: fixed;
-			width: 30%;
-			background-color : rgba(196, 196, 196);
-			float: left;
-			height : 100%
-		}
-		
-		nav {
-			width: 70%;
-			text-align : center;
-			float: right;
-		}
-		
-		main {
-			width: 70%;
-			text-align : center;
-			background-color : rgba(245, 245, 245);
-			float: right;
-		}
-		
-		.image {
-			border-radius: 50%;
-			border: 5px solid #aaa;
-			float : right;
-			margin-right : 30px;
-		}
-		
-		.imageClassic {
-			margin-left : 100px;
-			margin-top : 50px;
-		}
-		
-		header {
-			text-align : right;
-		}
-		
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333;
-		}
-
-		li {
-			float: left;
-		}
-
-		li a {
-			display: block;
-			color: white;
-			text-align: center;
-			padding: 14px 16px;
-			text-decoration: none;
-		}
-
-		li a:hover {
-			background-color: #111;
-		}
-		
-		.active {
-			background-color: rgba(141, 186, 228);
-			color: white;
-		}
-		
-		.linkedin {
-			display: block;
-			color: white;
-			text-align: center;
-			text-decoration: none;
-		}
-		
-		article
-		{
-			text-align : left;
-			padding-left : 20px;
-		}
-		
-		
-		
-		</style>
+		<link rel="stylesheet" type="text/css" href="style1.css">
 	</head>
 	
 	<body>
